--- a/shinybutton.css
+++ b/shinybutton.css
@@ -1,9 +1,5 @@
 .btn-shine {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 12px 48px;
+    position: relative;
     color: #fff;
     background: linear-gradient(to right, #9f9f9f 0, #fff 10%, #868686 20%);
     background-position: 0;
