--- a/background.css
+++ b/background.css
@@ -1,22 +1,7 @@
-body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: url(./Resources/glowing-violet-jellyfish-dam7jbdgdlw5izbn.gif);
-    background-size: cover;
-    filter: blur(50px);
-    z-index: -1;
-    /* Place the pseudo-element behind the content */
-}
 body {
-    background-position: 0 0;
-    background-repeat: no-repeat;
-    background-size: cover;
     display:flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     background-color: #0e1111;
     margin: 0;
     height: 100vh;
@@ -24,27 +9,87 @@ body {
 }
 #center {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding:0%;
-    margin: auto;
+}
+.item-1 {
+    grid-column: 1;
+}
+.item-2 {
+    grid-column: 2;
+}
+.item-3 {
+    grid-column: 3;
+}
+.item-4 {
+    grid-column: 4;
+}
+.item-5 {
+    grid-column: 5;
 }
 .item {
-    margin:10px;
-    overflow: visible;
+    font-size: xx-large;
 }
-.containerWrapper {
-    position: relative;
-    width: 60vw;
-    height: 60vh;
-}
-.container {
+/* CSS */
+.button-28 {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #cccccc;
+    cursor: default;
+    display: flex;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-weight: 600;
+    line-height: normal;
+    margin: auto;
+    min-height: min-content;
+    min-width: min-content;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+  }
+  
+  .button-28:disabled {
+    pointer-events: none;
+  }
+  
+  .button-28:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+  }
+  
+  .button-28:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
+.card::before {
+    background-image: url(./Resources/glowing-violet-jellyfish-dam7jbdgdlw5izbn.gif);
+    background-size: cover;
+    content: "";
+    filter: blur(50px);
+    z-index: -1;
+    /* Place the pseudo-element behind the content */
     position: absolute;
+    min-width: min-content;
+    width: calc(60vw);
+    height: calc(60vh * 1/2);
+}
+.card {
+    display: grid;
+    justify-content: space-around;
     border: 1px grey solid;
     border-radius: 32px;
-    width: 100%;
+    min-width: fit-content;
+    width: calc(60vw);
     height: calc(60vh * 1/2);
-    min-width: min-content;
-    min-height: min-content;
 }
