Some updates, about to update button

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 *, a {
-    font-family: Helvetica, sans-serif;
+    font-family: 'Peace Sans', Helvetica, sans-serif;
     color: white;
     text-decoration: none;
     --highlight: #F2613F;
