--- a/css/styleResume.css
+++ b/css/styleResume.css
@@ -1,37 +1,39 @@
-main {
-    margin: 10%;
+#profile {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row: repeat(4, 1fr);
+    padding: 10px;
+    background-color: darkgoldenrod;
+    column-gap: 10px;
+    row-gap: 0px;
+    color: antiquewhite;
+    font-family: typewriter-thin;
+    letter-spacing: 3px;
+    line-height: 30px;
+    max-width: 70dvw;
+    margin: 0 auto;
 }
-#Name {
-    grid-area: Name;
+#profile img {
+    width: 100%;
+    grid-row: 1/5;
+    grid-column: 1/2;
+    align-items: center;
+    float: left;
 }
-#Objective {
-    grid-area: Obj;
+#profile p {
+    padding: 0;
+    margin: 0;
 }
-#WorkExperience {
-    grid-area: WorkXp;
+#profile #bio {
+    grid-row: span 4;
 }
-#Education {
-    grid-area: Edu;
+#profile h2 {
+    grid-row: span 1;
+    grid-column: span 2;
+    margin: 5px;
 }
-#Certs {
-    grid-area: Certs;
-}
-#Languages {
-    grid-area: Lang;
-}
-#Skills {
-    grid-area: Skill;
-}
-@media(min-width: 600px) {
-    main {
-        display: grid;
-        grid-template:
-        "Name Name"
-        "Obj Obj"
-        "WorkXp Certs"
-        "WorkXp Certs"
-        "WorkXp Skill"
-        "Edu Lang"
-        ;
+@media only screen and (max-width: 1200px) {
+    #profile img {
+        display: none;
     }
-}
+  }
