--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 :root {
     overflow-x: hidden;
     scrollbar-width: none;
+    color: whitesmoke;
 }
 body {
     display: flex;
@@ -33,15 +34,18 @@ header #banner {
     background-size: cover;
     background-attachment: fixed;
     background-position: 50% 50%;
-    backdrop-filter: blur(10px);
     mix-blend-mode: color-dodge;
     padding: 0;
     margin: 0;
     height: 100%;
     background-image: url(../img/backdrop.jpg);
 }
-header h1 {
+h1, h2, h3 {
     font-family: typewriter;
+    letter-spacing: 10px;
+    color: darkgoldenrod;
+}
+header h1 {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -51,8 +55,6 @@ header h1 {
     transform: translateY(calc(50% + 2rem));
     margin: 5px;
     padding: 0;
-    color: darkgoldenrod;
-    letter-spacing: 10px;
     text-shadow: 1px 1px 2px #151515;
 }
 nav {
@@ -70,7 +72,7 @@ nav li {
 }
 nav li:hover {
     color: gold;
-    text-shadow: 0px 1px 5px gold;
+    text-shadow: 0px 7px 15px gold;
 }
 a {
     text-decoration: none;
@@ -99,6 +101,7 @@ main {
     z-index: 1;
     background-color: #151515;
     box-shadow: 1px 1px 10px #181C14;
+    padding: 20px 20%;
 }
 main::before {
     content: "";
@@ -116,6 +119,7 @@ main::before {
         80% 65%, 90% 30%, 100% 50%);
 }
 main::after {
+    z-index: -1;
     content: "";
     position: absolute;
     width: 100%;
@@ -129,6 +133,62 @@ main::after {
         40% 55%, 50% 30%, 60% 60%, 70% 40%, 
         80% 65%, 90% 30%, 100% 50%
     );
+}
+h2 {
+    text-align: center;
+    font-size: large;
+}
+hr {
+    border-color: #1d1d1d;
+    margin: 30px 50px;
+    padding: 0;
+}
+.transparentBG::after {
+    content: "";
+    position: absolute; /* Needed to stretch */
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url(../img/backdrop.jpg);
+    background-size: cover;
+    background-position: center;
+    filter: blur(2px);
+    z-index: -1;
+    background-attachment: fixed;
+    border-radius: 50px;
+    background-position: 50% 50%;
+}
+.transparentBG {
+    backdrop-filter: blur(0px);
+    padding: 1px 20px;
+    margin: 0;
+}
+section {
+    border: 1px solid whitesmoke;
+    margin: 20px 0;
+    padding: 20px;
+    border-radius: 10px;
+}
+section::after {
+    content: '';
+    clear: both;
+    display: block;
+}
+section img {
+    margin-right: 20px;
+    width: 150px;
+    float: left;
+}
+section p:nth-of-type(even) {
+    color: darkgray;
+}
+section a {
+    display: block;
+    text-align: right;
+}
+#about {
+    text-align: center;
 }
 p {
     color: inherit;
@@ -145,3 +205,22 @@ footer hr {
     background-color: currentColor;
     border: none;
 }
+/* @media screen and (max-width: 600px) {
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    nav ul li {
+        display: block;
+        text-align: center;
+        width: 100%;
+        border: 1px solid #151515;
+    }
+    nav ul li:nth-of-type(4) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+} */
