--- a/css/styleResume.css
+++ b/css/styleResume.css
@@ -1,7 +1,7 @@
 #profile {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-row: repeat(4, 1fr);
+    grid-template-columns: 200px repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     padding: 10px;
     background-color: darkgoldenrod;
     column-gap: 10px;
@@ -15,24 +15,29 @@
 }
 #profile img {
     width: 100%;
-    grid-row: 1/5;
+    grid-row: 1/3;
     grid-column: 1/2;
     align-items: center;
-    float: left;
-}
-#profile p {
-    padding: 0;
-    margin: 0;
-}
-#profile #bio {
-    grid-row: span 4;
 }
 #profile h2 {
-    grid-row: span 1;
-    grid-column: span 2;
+    color: antiquewhite;
+    grid-row: 1/2;
+    grid-column: 2/4;
     margin: 5px;
 }
-@media only screen and (max-width: 1200px) {
+#profile #bio {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+#contact {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    display: grid;
+    column-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+@media only screen and (max-width: 1000px) {
     #profile img {
         display: none;
     }
